src/css/main.css
/* ... */
.home-logo {
    font-size: 5rem;
    font-weight: 700;
    margin-bottom: 30px;
}

.main-search-input-div{
    position: relative;
    color: var(--grey-font);
}

.main-search-button {
    color: white;
    font-size: 1rem;
    margin-bottom: 50px;
}

.main-search-button:hover {
    background-color: var(--blue-hover);
}

.search-choices {
    display: flex;
    flex-shrink: 0;
    flex-direction: column;
    align-items: center;
    margin-bottom: 65px;
}

.language-choices, .tweet-type-choices {
    display: flex;
}

.search-choices input[type="radio"] {
    opacity: 0;
    position: fixed;
    width: 0;
}

.search-choices label {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--grey-font);
    background-color: var(--bg);
    width: 80px;
    height: 30px;
    font-size: 0.7rem;
    border-bottom: 1px solid var(--bg);
    transition: 0.2s;
}

.search-choices input[type="radio"]:checked + label {
    color: white;
    background-color: var(--grey-floating-panel-hover);
    border-bottom: 1px solid var(--blue);
}

.search-choices input[type="radio"]:hover + label {
    border-bottom: 1px solid var(--blue);
}

.search-choices input[type="radio"]:focus + label {
    border-bottom: 1px solid var(--blue);
}

.tweet-type-choices label {
    width: 100px;
    margin-top: 30px;
}

.timeline-search-page, .collections-page {
    padding-top: 50px;
    /* display: flex; */
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* height: Calc(100vh - 50px); */
}

.timeline-search-page {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    /* height: 100vh; */
    padding-top: 200px;
}

.collections-page {
    flex-direction: column;
    height: auto;
    width: 740px;
    justify-content: flex-start;
}

.timeline-header {
    font-size: 5rem;
    font-weight: 700;
    margin-bottom: 30px;
}

.timeline-header-slash {
    color: var(--grey-font);
}

.timeline-subheader {
    color: var(--blue);
    font-size: 1.5rem;
    font-weight: 400;
}

.timeline-search-input-div {
    position: relative;
    color: var(--grey-font);
}

.timeline-search-button {
    color: white;
    font-size: 1rem;
    margin-bottom: 50px;
}

.timeline-search-button:hover {
    background-color: var(--blue-hover);
}


.search-results, .collection-results {
    padding-top: 50px;
    width: 740px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-left: 1px solid var(--grey-inputbg);
    border-right: 1px solid var(--grey-inputbg);
}

.search-header {
    font-weight: 700;
    font-size: 2rem;
    margin-bottom: 50px;
}

.tweet-results-div {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: center;
    width: 100%;
}

.tweet-result, .collection-result-item {
    flex-shrink: 0;
    display: flex;
    align-items: flex-start;
    padding: 15px 15px;
    border-top: 1px solid var(--grey-inputbg);
    border-bottom: 1px solid var(--grey-inputbg);
}

.tweet-user-image img, .collection-tweet-user-image img {
    object-fit: cover;
    width: 50px;
    height: 50px;
    border-radius: 200px;
    margin-right: 10px;
}

.tweet-name-div, .collection-tweet-name-div{
    display: flex;
    align-items: center;
}

.tweet-body {
    /* width: 70%; */
}

.tw-name-item, .collection-tw-name-item {
    margin-right: 5px;
}

.verified, .collection-verified {
    font-size: 15px;
}

.tweet-name, .collection-tweet-name {
    font-weight: 700;
}

.tweet-name {
    cursor: pointer;
    border-bottom: 1px solid transparent;
}

.tweet-name:hover, .tweet-name:active {
    border-bottom: 1px solid var(--blue-hover);
}

.tweet-username, .tweet-time, .collection-tweet-username, .collection-tweet-time {
    color: var(--grey-font);
}

.tweet-time {
    /* display: none; */
    text-align: right;
}

.tweet-text, .collection-tweet-text {
    margin-bottom: 10px;
}

.tweet-image img, .collection-tweet-image img {
    width: 100%;
    width: 648px;
    height: 400px;
    object-fit: cover;
    border-radius: 20px;
    border: 1px solid var(--grey-floating-panel);
}

.tweet-image video, .collection-tweet-image video {
    width: 100%;
    width: 648px;
    height: 400px;
    object-fit: cover;
    border-radius: 20px;
    border: 1px solid var(--grey-floating-panel);
}

.tweet-footer {
    width: 648px;
    align-items: center;
}

.tweet-footer, .collection-tweet-footer {
    font-size: 0.9rem;
    display: flex;
    justify-content: space-between;
    margin-top: 10px;
}

.tweet-metrics, .collection-tweet-metrics {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: var(--grey-font);
}

.tweet-metrics p {
    margin-right: 15px;
}

.tweet-icon {
    fill: var(--blue-label);
    margin-right: 3px;
    width: 18px;
    height: 18px;
}

.save-to-collection, .remove-from-collection {
    position: relative;
    cursor: pointer;
    color: var(--blue-label);
    padding: 5px 10px;
    background-color: var(--grey-floating-panel);
    border-radius: 5px;
    display: flex;
    align-items: center;
}

.save-to-collection:hover, .remove-from-collection:hover {
    background-color: var(--grey-floating-panel-hover);
}

.save-to-collection svg, .remove-from-collection svg {
    fill: var(--blue-label);
    margin-right: 10px;
    width: 18px;
    height: 18px;
}


.save-to-collection-prompt {
    position: absolute;
    z-index: 20;
    width: 350px;
    height: 400px;
    display: flex;
    flex-direction: column;
    overflow: auto;
    background-color: var(--grey-inputbg);
    border-radius: 15px;
    box-shadow: rgba(4, 74, 111, 0.7) 0px 0px 20px -5px;
    border: 1px solid var(--grey-font);
}

.save-to-collection-header {
    background-color: var(--grey-floating-panel);
    width: 350px;
    width: 100%;
    color: white;
    font-weight: 700;
    font-size: 1.5rem;
    padding: 30px 0px 30px 40px;
}
/* ... */

